<?php

declare(strict_types=1);

namespace SOLID\SRP;

class EmployeeData
{
}
